unify logging to JUL.  Harden RDFFormatter
lots of fixes